<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="110dp"
        android:background="@color/white"
        android:fillViewport="true"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/linear_hsc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/relative_guleCar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@mipmap/image_camera" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="59dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/asterisk"
                        android:textColor="@color/red"
                        android:textSize="10dp" />

                    <TextView
                        android:id="@+id/text_guleCar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/photo_guleCar"
                        android:textColor="@color/colorHint"
                        android:textSize="10dp" />
                </LinearLayout>

            </FrameLayout>

            <FrameLayout
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_marginLeft="10dp"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/relative_guleBattery"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@mipmap/image_camera" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="59dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/asterisk"
                        android:textColor="@color/red"
                        android:textSize="10dp" />

                    <TextView
                        android:id="@+id/text_guleBattery"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/photo_guleBattery"
                        android:textColor="@color/colorHint"
                        android:textSize="10dp" />
                </LinearLayout>


            </FrameLayout>

            <FrameLayout
                android:layout_width="85dp"
                android:layout_height="85dp">

                <ImageView
                    android:id="@+id/relative_labelANormal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@mipmap/image_camera" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="59dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/asterisk"
                        android:textColor="@color/red"
                        android:textSize="10dp" />

                    <TextView
                        android:id="@+id/text_labelANormal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/photo_labelA"
                        android:textColor="@color/colorHint"
                        android:textSize="10dp" />
                </LinearLayout>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/fl_labelB"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_marginLeft="10dp"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/iv_labelB"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@mipmap/image_camera" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="59dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/asterisk"
                        android:textColor="@color/red"
                        android:textSize="10dp" />

                    <TextView
                        android:id="@+id/tv_labelB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/photo_labelB"
                        android:textColor="@color/colorHint"
                        android:textSize="10dp" />
                </LinearLayout>

            </FrameLayout>

            <FrameLayout
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_marginLeft="10dp">

                <ImageView
                    android:id="@+id/relative_applicationFormNormal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@mipmap/image_camera" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="59dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/asterisk"
                        android:textColor="@color/red"
                        android:textSize="10dp" />

                    <TextView
                        android:id="@+id/text_applicationFormNormal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/photo_applicationForm"
                        android:textColor="@color/colorHint"
                        android:textSize="10dp" />
                </LinearLayout>

            </FrameLayout>

            <FrameLayout
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_marginLeft="10dp">

                <ImageView
                    android:id="@+id/relative_plateNumNormal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@mipmap/image_camera" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="59dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/asterisk"
                        android:textColor="@color/red"
                        android:textSize="10dp" />

                    <TextView
                        android:id="@+id/text_plateNumNormal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/photo_plateNum"
                        android:textColor="@color/colorHint"
                        android:textSize="10dp" />
                </LinearLayout>

            </FrameLayout>


            <FrameLayout
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_marginLeft="10dp">

                <ImageView
                    android:id="@+id/relative_identityNormal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@mipmap/image_camera" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="59dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/asterisk"
                        android:textColor="@color/red"
                        android:textSize="10dp" />

                    <TextView
                        android:id="@+id/text_identityNormal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/photo_identity"
                        android:textColor="@color/colorHint"
                        android:textSize="10dp" />
                </LinearLayout>

            </FrameLayout>

            <FrameLayout

                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_marginLeft="10dp">

                <ImageView
                    android:id="@+id/relative_invoiceNormal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@mipmap/image_camera" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="59dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/asterisk"
                        android:textColor="@color/red"
                        android:textSize="10dp" />

                    <TextView
                        android:id="@+id/text_invoiceNormal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/photo_invoice"
                        android:textColor="@color/colorHint"
                        android:textSize="10dp" />
                </LinearLayout>

            </FrameLayout>

        </LinearLayout>

    </HorizontalScrollView>

</LinearLayout>